--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-hook-form": "^7.22.1",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
