--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-router-dom": "^6.1.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.1.2"
   },
